# TaskMeAgents

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: code-reviewer.md  test-writer.md
.claude/commands/: investigate.md  opsx-apply.md  opsx-archive.md  opsx-bulk-archive.md  opsx-continue.md  opsx-explore.md  opsx-ff.md  opsx-new.md  opsx-onboard.md  opsx-sync.md  opsx-verify.md  review.md  test.md
.claude/skills/: agent-config.md  attachment-storage.md  auth-and-keys.md  deployment-railway.md  error-handling.md  fastapi-endpoint.md  history-patterns.md  llm-provider.md  mcp-integration.md  scheduled-workflows.md  sqlalchemy-migration.md  sub-agent-delegation.md  temporal-activity.md  temporal-workflow.md  test-patterns.md  websocket-streaming.md
alembic/: env.py
alembic/versions/: 001_initial.py
cli/: client.py  main.py  output.py
cli/commands/: agent.py  chat.py
docker/: init-db.sql
examples/: sample-agent.json  task-breakdown.json  task-copilot.json
mcp_servers/serpapi-mcp/: Dockerfile  requirements.txt  server.py
openspec/: workflow.md
scripts/: seed.sh  setup.sh
src/taskmeagents/: config.py  database.py  main.py
tests/: conftest.py
tests/e2e/: test_error_recovery.py
tests/fixtures/: agents.py  messages.py
tests/integration/: conftest.py  test_api_agents.py  test_api_auth.py  test_api_models.py  test_attachment_storage.py
tests/mock/: test_agent_factory.py  test_anthropic_provider.py  test_companion_service.py  test_openai_provider.py
(+57 files in other folders)
