[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskmeagents"
version = "0.1.0"
description = "AI agents infrastructure for TaskMe"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "temporalio>=1.8",
    "anthropic>=0.40",
    "openai>=1.50",
    "mcp>=1.0",
    "httpx>=0.27",
    "websockets>=13.0",
    "cachetools>=5.4",
    "aiofiles>=24.0",
    "python-multipart>=0.0.9",
    "structlog>=24.0",
    "pyjwt[crypto]>=2.8",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "httpx>=0.27",
    "respx>=0.21",
    "time-machine>=2.14",
]

[project.scripts]
taskme-cli = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/taskmeagents", "cli"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "temporal: tests requiring Temporal test server (deselect with -m 'not temporal')",
]
